--- a/haddock-library/haddock-library.cabal
+++ b/haddock-library/haddock-library.cabal
@@ -27,6 +27,9 @@ library
     , bytestring   >= 0.9.2.1 && < 0.11
     , containers   >= 0.4.2.1 && < 0.6
     , transformers >= 0.3.0   && < 0.6
+    , commonmark
+    , text 
+    , blaze-builder >= 0.4.1.0
 
   -- internal sub-lib
   build-depends:        attoparsec
@@ -38,6 +41,7 @@ library
     Documentation.Haddock.Markup
     Documentation.Haddock.Parser
     Documentation.Haddock.Parser.Monad
+    Documentation.Haddock.Parser.Markdown
     Documentation.Haddock.Types
     Documentation.Haddock.Utf8
 
