Custom 'Identifier' spec
Not even fully correct, but better than nothing...

--- a/haddock-library/haddock-library.cabal
+++ b/haddock-library/haddock-library.cabal
@@ -29,6 +29,7 @@ library
     , transformers >= 0.3.0   && < 0.6
     , commonmark
     , text 
+    , parsec 
     , blaze-builder >= 0.4.1.0
 
   -- internal sub-lib
